--- a/manage_assets/css/style.css
+++ b/manage_assets/css/style.css
@@ -169,9 +169,9 @@ text-align: center;border-radius: 4px;cursor: pointer;margin: 10px 10px 0 0;disp
 }
 .colSec:last-child{margin-right:0}
 .overLap{position:absolute;width:100%;height:100%;background:rgba(0,0,0,0.3);top:0px;border-radius:5px; left:0px !important;}
-.colBox{padding: 0px 0 0 0;display: inline-block;border-radius: 10px 10px 0 0;position: relative;background-color: #f8f8f8; }
+.colBox{padding: 0px 0 0 0;display: inline-block;border-radius: 10px 10px 0 0;position: relative;background-color: #f8f8f8;min-height:100px;max-height:100px; }
 /*.colBox figure{text-align: center;}*/
-.colBox:after{position: absolute;background: url('../img/eye.png') top center no-repeat;height: 49px;width:49px; content: '';right:10px;top:10px; cursor:pointer}
+.colBox:after{position: absolute;background: url('../img/eye.png') top center no-repeat;min-height:100px;max-height:100px;height: 49px;width:49px; content: '';right:10px;top:10px; cursor:pointer}
 .colBox .img-responsive{text-align: center;margin: 0 auto; display: initial;
   filter: grayscale(100%) brightness(109%) contrast(120%);
   transition: all .5s ease-in-out;
