--- a/css/style.css
+++ b/css/style.css
@@ -1142,18 +1142,22 @@ margin: 0px;
 .pad20{
 	padding: 22px;
 }
-#temp_article > div,
+#article_listing > div,
+#event_listing > div,
+#job_listing > div,
+#tour_listing > div {
+    min-height: 390px;
+    max-height: 390px;
+    float: left;
+}
+/*#temp_article{
+    display: none;
+}*/
+/*#temp_article > div,
 #event_listing > div,
 #job_listing > div,
 #temp_tour > div {
-    min-height: 420px;
+    max-height: 450px;
     float: left;
 }
-#temp_article > div,
-#event_listing > div,
-#job_listing > div,
-#temp_tour > div {
-    max-height: 420px;
-    float: left;
-}
-
+*/
