--- a/public/css/subscribe.css
+++ b/public/css/subscribe.css
@@ -77,7 +77,7 @@ form textarea, form input {
     float: left;
     margin-top: 100%;
 }
-form #module,button{
+form #type,button{
     width: 305px;
     border: 1px solid #666;
     height: 37px;
