--- a/public/css/style1.css
+++ b/public/css/style1.css
@@ -1002,6 +1002,10 @@ width:100%;
 .about-text a {
 	text-decoration: none;
 }
+.about-content ol li{
+    text-decoration: none;
+    font-size: 18px;
+}
 .about-content{
 	padding: 15px;
 }
