--- a/public/css/style1.css
+++ b/public/css/style1.css
@@ -94,7 +94,7 @@ a:hover{text-decoration: none;}
 .trialForm aside{margin: 0 0 30px 0;}
 
 .landingAdv img{width: 100%;}
-.slideBox .item img{width: 100%;}
+.slideBox .item img{width: 100%;height: 111%;}
 
 #feature .box-app{min-height: 225px;    border-bottom: 4px solid #03a9f4;}
 
