--- a/public/css/b_style.css
+++ b/public/css/b_style.css
@@ -1,7 +1,6 @@
 body{margin:0px;
 font-family:'Poppins', sans-serif!important;
 font-size: 13px;}
-a:hover{text-decoration: none;}
 
 /*@font-face {
   font-family:'Poppins-Regular';
@@ -16,43 +15,10 @@ a:hover{text-decoration: none;}
   src: local('Poppins-Regular'), url(Poppins-Regular.woff2) format('woff');
 }*/
 
-
-
-
-.slideBox.carousel{top: -68px;}
-.slideBox .carousel-inner>.item>a>img, .slider .carousel-inner>.item>img{width: 100%;}
-.slideBox .item{padding: 0;height: 500px;}
-.slideBox .ban-pera h1{margin-top: 0;}
-.slideBox .carousel-caption{top: 30%;}
-.blue-Home.blue-bg{bottom: -5px;}
-.slideBox .carousel-indicators{visibility:visible;}
-.slideBox .btn.btn-read{margin-top: 15px;}
-
-
 .ponting p{position: relative;padding-left:30px;margin:0 0 5px 0 !important }
 .ponting p:before{margin:0;position: absolute;content: '';left: 0;top:4px;
-    background:url('../img/iconList.png') no-repeat;height: 18px;width: 18px;}
-
-.getAppBox{}
-.getAppBox h3{text-transform: uppercase;font-weight: bold;}
-.getAppBox img{margin-bottom: 10px;}
-
-.createJobBox{padding:30px 0;background-color: #78d6bb;margin: 50px 0 30px 0; }
-.createJobBox h2{font: bold 22px/26px 'Poppins';color: #fff;text-transform: uppercase;margin: 0 0 10px 0;}
-.createJobBox h3{font: bold 16px/20px 'Poppins';color: #fff;margin: 0;}
-.createJobBox a{font: bold 18px/20px 'Poppins';color: #78d6bb;text-transform: uppercase;
-    
-    background-color: #fff;
-    border:1px solid #fff;
-    padding: 10px 40px;
-    border-radius:20px;
-    letter-spacing: 0.3px;
+    background:url('../img/iconList.png') no-repeat;height: 18px;width: 18px;
 }
-
-.createJobBox.createEventBox{background-color: #f4a727;}
-.createJobBox.createEventBox a{color: #f4a727;}
-
-.createJobBox a:hover{text-decoration: none;background-color: transparent;color: #fff;border-color: #fff;}
 
 .margin20{margin: 20px;}
 .showCaseBox{display: table;position: relative;margin:30px 40px;}
@@ -93,149 +59,13 @@ a:hover{text-decoration: none;}
 }
 .trialForm aside{margin: 0 0 30px 0;}
 
-.landingAdv img{width: 100%;}
-.slideBox .item img{width: 100%;height: 111%;}
-
-#feature .box-app{min-height: 225px;    border-bottom: 4px solid #03a9f4;}
-
-.resourceSec{}
-.testimonials.resourceSec{height: auto !important;padding: 30px 0;}
-.resourceSec .white-b{padding: 20px;}
-.white-b h4 {color: #1f1f1f;font: bold 16px/24px 'Poppins';margin:0 0 10px 0; }
-.white-b p {color: #666666;font:bold 14px/22px 'Poppins';margin: 0 0 15px 0px;}
-.white-b span {color: #333;font-weight: normal; margin: 0 0 0 5px;}
-
-.jobSecHome{}
-.commnStyle .white-b{padding:25px 10px }
-.commnStyle .white-b h4 {color: #1f1f1f;font: bold 16px/24px 'Poppins';margin:0 0 15px 0; }
-.commnStyle p {color: #333;font:bold 14px/16px 'Poppins';margin: 0 0 8px 0px;}
-.commnStyle span {color: #666;font:normal 13px/18px 'Poppins'; }
-.commnStyle .img-box {width: 100%;height: initial; overflow: hidden;border-radius: 10px 10px 0px 0px;}
-.mediaSecHome{background-color: #eee;padding:30px 0; }
-
-.readMoreBtn{text-align: center;margin: 10px 0;}
-.white-b .readMoreBtn a{position: relative;    color: #03a9f4;font: 16px/20px 'Poppins'; }
-
-ul.pagingSec{margin: 20px 0;padding: 0;list-style: none;}
-ul.pagingSec li{display: inline-block;}
-ul.pagingSec li a{color: black;padding: 8px 16px;text-decoration: none;transition: background-color .3s;
-    border: 1px solid #ddd;font:  14px/15px 'Poppins';color: #333;}
-ul.pagingSec li a.active, ul.pagingSec li a:hover{background-color: #03a9f4;color: #fff;}
-div.subTitle{ color: #666666;font: 14px/22px 'Poppins';margin: 10px 0 30px 0;width: 70%;margin: 0 auto;}
-
-.sidebarMide {
-    background-color: #03a9f4;
-    color: #fff;   
-    width: 50px;    
-    right: 0px;
-    /*border-radius: 50%;*/
-    position: fixed;
-    bottom: 40%;
-    text-align: center;      
-    box-shadow: 1px 5px 9px #6d6d6d;
-    /*animation: 2s ease-in infinite zoomin;*/
-    transition: all .2s ease-in-out;
-}
-.sidebarMide a{color: #fff;border-bottom: 1px solid #fff;display: block;padding:8px 0;font-size: 18px; }
-.sidebarMide a:first-child{background-color: #3b5a9b;}
-.sidebarMide a:last-child{border-bottom: none;background-color: #1686b0;}
-.sidebarMide a:hover{/*transform:scale(1.3);*/transition: all 0.2s ease-out 0s;background-color: #000; }
-
-.readMoreBtn a:after{position: absolute;content: '';background: url(../img/arrow_more_blue.png) no-repeat;
-    right:-28px;height: 10px;width: 20px; top: 8px; 
-    -webkit-transition: 0.5s all linear;
-    -moz-transition: 0.5s all linear;
-    -o-transition: 0.5s all linear;
-    transition: 0.5s all linear;
-}
-.resourceSec .item:hover .readMoreBtn a:after{right:-35px;
-    -webkit-transition: 0.5s all linear;
-    -moz-transition: 0.5s all linear;
-    -o-transition: 0.5s all linear;
-    transition: 0.5s all linear;
-}
-.resourceSec .img-box {
-    width: 100%;
-     height: initial; 
-    overflow: hidden;
-    border-radius: 10px 10px 0px 0px;
-}
-.resourceSec .img-box img{overflow: hidden;
-     -webkit-transition: 0.5s all linear;
-    -moz-transition: 0.5s all linear;
-    -o-transition: 0.5s all linear;
-    transition: 0.5s all linear;
-}
-
-.resourceSec .item:hover img{
-    transform: scale(1.4)rotate(10deg);
-    -o-transform: scale(1.4)rotate(10deg);
-    -webkit-transform: scale(1.4)rotate(10deg);
-    -moz-transform: scale(1.4)rotate(10deg);
-}
-
-
-
-.commnStyle .item:hover .readMoreBtn a:after{right:-35px;
-    -webkit-transition: 0.5s all linear;
-    -moz-transition: 0.5s all linear;
-    -o-transition: 0.5s all linear;
-    transition: 0.5s all linear;
-}
-.commnStyle .img-box {
-    width: 100%;
-    height: 200px; 
-    overflow: hidden;
-    border-radius: 10px 10px 0px 0px;
-}
-.bg-event .commnStyle .img-box {height: inherit;}
-.sportTournamentSec{background-color: #03a9f4;}
-.sportTournamentSec .commnStyle .img-box{height: inherit;}
-.sportTournamentSec .owl-item.active.center .item {
-    opacity: 1;
-    -webkit-transform: scale3d(1.0, 1.0, 1);           
-}
-
-.sportTournamentSec .item {
-    /* text-align: center; */
-    padding: 0px;
-    /* margin-bottom: 80px; */
-    opacity: 1;
-    -webkit-transform: scale3d(0.8, 0.8, 1);
-    transform: scale3d(0.8, 0.8, 1);
-    -webkit-transition: all 0.3s ease-in-out;
-    -moz-transition: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out;
-    /* width: 73%; */
-    /* margin: 0px auto;*/
-}
-
-
-.commnStyle .img-box img{overflow: hidden;
-     -webkit-transition: 0.5s all linear;
-    -moz-transition: 0.5s all linear;
-    -o-transition: 0.5s all linear;
-    transition: 0.5s all linear;
-}
-
-.commnStyle .item:hover img{
-    transform: scale(1.4)rotate(10deg);
-    -o-transform: scale(1.4)rotate(10deg);
-    -webkit-transform: scale(1.4)rotate(10deg);
-    -moz-transform: scale(1.4)rotate(10deg);
-}
-
-
-
-
-
 
 .bg0{background-color: rgba(248, 248, 248, 0);
     border-color: rgba(231, 231, 231, 0);
     margin-bottom: 0px;
     border-radius: 0px;
     z-index: 2;   
-}
+    }
 .margin15{margin: 15px;}
 .margin-spc{margin:40px;}
 .relative{position: relative;}
@@ -256,22 +86,22 @@ div.subTitle{ color: #666666;font: 14px/22px 'Poppins';margin: 10px 0 30px 0;wid
 .affix .navbar-nav>li>a {
     padding-top: 27px;
     padding-bottom: 12px;
-      transition: 0.5s all linear;
-        -webkit-transition:0.5s all linear;
-        -o-transition: 0.5s all linear;
-        -moz-transition: 0.5s all linear;  
+      transition: 1s all linear;
+        -webkit-transition:1s all linear;
+        -o-transition: 1s all linear;
+        -moz-transition: 1s all linear;  
 }
 .affix img {
 	    margin-top: 0px;
     width: 93%;
-      transition: 0.5s all linear;
-    -webkit-transition: 0.5s all linear;
-    -o-transition: 0.5s all linear;
-    -moz-transition: 0.5s all linear;
+      transition: 1s all linear;
+    -webkit-transition: 1s all linear;
+    -o-transition: 1s all linear;
+    -moz-transition: 1s all linear;
 }
 
 .full-banner{
-	background-image:url('../img/top-banner-top.jpg');
+	background-image:url('../img/banner.png');
 	background-size: cover;
 	height: 648px;
 	background-position: center;
@@ -310,16 +140,6 @@ div.subTitle{ color: #666666;font: 14px/22px 'Poppins';margin: 10px 0 30px 0;wid
     border-bottom: 1px solid #ffff;
    /* padding: 28px 0px 13px 0px;*/
 }
-.navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:focus, .navbar-default .navbar-nav>.open>a:hover{
-    color: #fff;
-    background-color: transparent;
-}
-.dropdown-menu>li>a:focus, .dropdown-menu>li>a:hover {
-    color: #fff;
-    text-decoration: none;
-    background-color: #03a9f4
-}
-.dropdown-menu > li > a{padding: 5px 20px;text-transform: capitalize;}
 
 .btn.btn-read {
     color: #fff;
@@ -422,8 +242,8 @@ filter: progid:DXImageTransform.Microsoft.Shadow(Strength=10, Direction=180, Col
     height: 659px;
     background-position: center;
     background-repeat: no-repeat;
-   /* -webkit-clip-path: polygon(0 0, 100% 0, 100% 74%, 0 99%);
-    clip-path: polygon(0 0, 100% 0, 100% 74%, 0 99%);*/
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 74%, 0 99%);
+    clip-path: polygon(0 0, 100% 0, 100% 74%, 0 99%);
   }
 
 	.testimonial-name {
@@ -510,7 +330,7 @@ filter: progid:DXImageTransform.Microsoft.Shadow(Strength=10, Direction=180, Col
 	.white-heading{
 	text-align: center;
 	color: #fff;
-    	margin: 35px;
+	margin: 35px;
 	}
 	.white-heading h3{
 	text-transform: uppercase;
@@ -554,10 +374,9 @@ border-radius: 0px 0px 10px 10px;
     height: 700px;
     background-position: center;
     background-repeat: no-repeat;
-	/*-webkit-clip-path: polygon(0 33%, 100% 8%, 100% 100%, 0 100%);
-    clip-path: polygon(0 33%, 100% 8%, 100% 100%, 0 100%);*/
+	-webkit-clip-path: polygon(0 33%, 100% 8%, 100% 100%, 0 100%);
+    clip-path: polygon(0 33%, 100% 8%, 100% 100%, 0 100%);
     margin-bottom: 20px;
-    padding: 30px 0;
 }
 	.blue-bg-left{
     background: #03a9f4 url(../img/ball-img.png);
@@ -615,10 +434,10 @@ border-radius: 0px 0px 10px 10px;
 .team-bg{
 	background-image: url(../img/team-bg.jpg);
     background-size: cover;
-    height: 490px;
+    height: 643px;
     background-position: center;
-   /* -webkit-clip-path: polygon(0 0, 100% 0, 100% 74%, 0 99%);
-    clip-path: polygon(0 0, 100% 0, 100% 74%, 0 99%);*/
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 74%, 0 99%);
+    clip-path: polygon(0 0, 100% 0, 100% 74%, 0 99%);
     color: #ffff;
     text-align: center;
 }
@@ -642,7 +461,6 @@ border-radius: 0px 0px 10px 10px;
 	color: #fff;
 	font-size: 17px
 }
-textarea#exampleFormControlTextarea1{height: 70px}
 	
 .form-control01{
 	display: block;
@@ -662,7 +480,6 @@ textarea#exampleFormControlTextarea1{height: 70px}
     -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
     transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
     border-bottom: 1px solid #666666;
-    resize: none;
 }
 
 input{
@@ -692,7 +509,7 @@ label{
 .right-cont h3{
 	text-transform: uppercase;
 	color: #666666;
-	margin-bottom: 20px;
+	/*! margin-bottom: 20px; */
 }
 .right-cont p{
 	color: #666666;
@@ -1002,10 +819,6 @@ width:100%;
 .about-text a {
 	text-decoration: none;
 }
-.about-content ol li{
-    text-decoration: none;
-    font-size: 18px;
-}
 .about-content{
 	padding: 15px;
 }
@@ -1015,8 +828,7 @@ width:100%;
 }
 .about-content p{
  color: #666666;
- font:18px/20px 'Poppins';
- text-align: justify;
+ font:14px/20px 'Poppins';
 }
 
 .about-bg {
@@ -1034,9 +846,6 @@ width:100%;
     text-transform: uppercase;
     font-weight: 600;
     letter-spacing: 3px;
-}
-.partner-bg{
-background-image: url(../img/buisness.png) !important;
 }
 .joblist-bg{
 	background-image: url(../img/joblist-bg.jpg);
@@ -1113,9 +922,9 @@ background-image: url(../img/buisness.png) !important;
 	color: #666666;
 }
 .about-bg{
-	background-image: url(../img/about-bg.jpg);
+	background-image: url(../img/banner.png);
     background-size: cover;
-	padding: 20px
+	padding: 20px;
 }
 .socails-team ul{
 	margin: 0px;
@@ -1151,98 +960,42 @@ margin: 0px;
 	padding: 22px;
 }
 
-#event_listing > div,
-#job_listing > div,
-#tour_listing > div,
-#trial_listing > div {
-    min-height: 400px;
-    max-height: 400px;
-    float: left;
-}
-#article_listing > div{min-height: 400px;
-    min-height: 430px;
-    max-height: 430px;
-    float: left;
-}
-.about_new_banner {
-    background-image: url(../img/banner-1.jpg);
-    background-size: cover ;
-    height: 414px;
-    background-position: center top;
-    -webkit-clip-path: polygon(0 0, 100% 0, 100% 59%, 0 99%);
-    clip-path: polygon(0 0, 100% 0, 100% 59%, 0 99%);
-}
-.about-bg .ban-pera h1 {
-    margin-top: 83px;
-    color: #fff;
-    text-transform: uppercase;
-    font-weight: 600;
-    letter-spacing: 3px;
-}
-.loading {
-  position: fixed;
-  z-index: 999;
-  height: 2em;
-  width: 2em;
-  overflow: show;
-  margin: auto;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
+.cont_box{
+    border:1px solid #efefef;
+    padding: 7px 34px 10px;
 }
 
-/* Transparent Overlay */
-.loading:before {
-  content: '';
-  display: block;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-    background: radial-gradient(rgba(20, 20, 20,.8), rgba(0, 0, 0, .8));
+.cont_box_li{list-style-image: url(../img/arrow_more_blue.png); }
 
-  background: -webkit-radial-gradient(rgba(20, 20, 20,.8), rgba(0, 0, 0,.8));
+.registration{
+    position: fixed;
+    background-color: red;
+    right: 0 ;
+    background-color: #03a9f4;
+    padding:8px 20px ;
+    border-bottom-right-radius:   10px;
+    border-bottom-left-radius:   10px
+     }
+.vertical-text {
+   
+    transform: rotate(90deg);
+    transform-origin: right top 0;
+
 }
 
-/* :not(:required) hides these rules from IE9 and below */
-.loading:not(:required) {
-  /* hide "loading..." text */
-  font: 0/0 a;
-  color: transparent;
-  text-shadow: none;
-  background-color: transparent;
-  border: 0;
-}
+.registration a{text-decoration: none; color: #fff}
 
-.loading:not(:required):after {
-  content: '';
-  display: block;
-  font-size: 10px;
-  width: 1em;
-  height: 1em;
-  margin-top: -0.5em;
-  -webkit-animation: spinner 1500ms infinite linear;
-  -moz-animation: spinner 1500ms infinite linear;
-  -ms-animation: spinner 1500ms infinite linear;
-  -o-animation: spinner 1500ms infinite linear;
-  animation: spinner 1500ms infinite linear;
-  border-radius: 0.5em;
-  -webkit-box-shadow: rgba(255,255,255, 0.75) 1.5em 0 0 0, rgba(255,255,255, 0.75) 1.1em 1.1em 0 0, rgba(255,255,255, 0.75) 0 1.5em 0 0, rgba(255,255,255, 0.75) -1.1em 1.1em 0 0, rgba(255,255,255, 0.75) -1.5em 0 0 0, rgba(255,255,255, 0.75) -1.1em -1.1em 0 0, rgba(255,255,255, 0.75) 0 -1.5em 0 0, rgba(255,255,255, 0.75) 1.1em -1.1em 0 0;
-box-shadow: rgba(255,255,255, 0.75) 1.5em 0 0 0, rgba(255,255,255, 0.75) 1.1em 1.1em 0 0, rgba(255,255,255, 0.75) 0 1.5em 0 0, rgba(255,255,255, 0.75) -1.1em 1.1em 0 0, rgba(255,255,255, 0.75) -1.5em 0 0 0, rgba(255,255,255, 0.75) -1.1em -1.1em 0 0, rgba(255,255,255, 0.75) 0 -1.5em 0 0, rgba(255,255,255, 0.75) 1.1em -1.1em 0 0;
+.bg_color{background-color: #eff7fd}
+
+
+
+@media only screen and (min-width: 320px) and (max-width: 480px) {
+
+    .blue-bg{
+        margin-bottom: 39px
+        }
+
+        .play-icon{margin-bottom: 20px}
 }
 
 
-/
-/*#temp_article{
-    display: none;
-}*/
-/*#temp_article > div,
-#event_listing > div,
-#job_listing > div,
-#temp_tour > div {
-    max-height: 450px;
-    float: left;
-}
-*/
