--- a/public/css/style1.css
+++ b/public/css/style1.css
@@ -94,7 +94,7 @@ a:hover{text-decoration: none;}
 .trialForm aside{margin: 0 0 30px 0;}
 
 .landingAdv img{width: 100%;}
-.slideBox .item img{width: 100%;height: 111%;}
+.slideBox .item img{width: 100%;}
 
 #feature .box-app{min-height: 225px;    border-bottom: 4px solid #03a9f4;}
 
@@ -625,6 +625,37 @@ border-radius: 0px 0px 10px 10px;
 
 .team-bg img {
 	margin: 0px auto;
+}
+.testimonial-bg img {
+    margin: 0px auto;
+}
+.testimonial-bg{
+    background-color: #cccccc36; 
+    background-size: cover;
+    height: 615px;
+    background-position: center;
+
+   /* -webkit-clip-path: polygon(0 0, 100% 0, 100% 74%, 0 99%);
+    clip-path: polygon(0 0, 100% 0, 100% 74%, 0 99%);*/
+    color: #ffff;
+    text-align: center;
+}
+.testimonial-bg .item h4{
+    color: #00000094;
+    font-size: 14px;
+
+}
+.testimonial-bg .item span,p{
+    color: #000;
+    font-size: 14px;
+    font-weight: bold;
+    
+}
+.testimonial-bg .item img
+{
+        width: 200px;
+    height: 200px;
+    border-radius: 103px;
 }
 .socails ul{
 	margin: 0px;
