--- a/public/css/style1.css
+++ b/public/css/style1.css
@@ -645,7 +645,7 @@ border-radius: 0px 0px 10px 10px;
     font-size: 14px;
 
 }
-.testimonial-bg .item span,p{
+.testimonial-bg .item span h5{
     color: #000;
     font-size: 14px;
     font-weight: bold;
