--- a/public/manage_assets/css/style.css
+++ b/public/manage_assets/css/style.css
@@ -456,3 +456,8 @@ section.half h3 {
     bottom: 0;
     font-family: sans-serif;
 }
+.rec{
+    width: 38%;
+    height: 41%;
+    margin-right: 62%;
+}
