added the new section for partners name representation

--- a/public/css/style1.css
+++ b/public/css/style1.css
@@ -1273,7 +1273,37 @@ box-shadow: rgba(255,255,255, 0.75) 1.5em 0 0 0, rgba(255,255,255, 0.75) 1.1em 1
     font-weight: bolder;
    }
 
-/
+#partner-bg{
+    background-color: #ccc;
+    background-size: cover;
+    height: 520px
+    ;
+    background-position: center;
+    background-repeat: no-repeat;
+   /* -webkit-clip-path: polygon(0 0, 100% 0, 100% 74%, 0 99%);
+    clip-path: polygon(0 0, 100% 0, 100% 74%, 0 99%);*/
+  }
+  #partner-bg .item img
+{
+    width: 326px;
+    height: 200px;
+    border-radius: 103px;
+    
+}
+#partner-bg h3{
+ color: #000;
+ font-weight: bolder;
+}
+#partner-bg .item h5
+{
+    color: #000;
+    font-size: 20px;
+    text-align: inherit;
+
+}
+.owl-nav{
+    display: none;
+}
 /*#temp_article{
     display: none;
 }*/
