--- a/public/css/style1.css
+++ b/public/css/style1.css
@@ -1,6 +1,8 @@
 body{margin:0px;
 font-family:'Poppins', sans-serif!important;
-font-size: 13px;}
+font-size: 13px;
+overflow: auto;
+width: 100%}
 a:hover{text-decoration: none;}
 
 /*@font-face {
@@ -733,23 +735,29 @@ label{
 .foot-bg{
     background:#000000;
     background-size: cover;
-        height: 222px;
+       /* height: 222px;*/
     background-position: center;
     background-repeat: no-repeat;
-    -webkit-clip-path: polygon(0 87%, 100% 8%, 100% 100%, 0 100%);
-    clip-path: polygon(0 71%, 100% 8%, 100% 100%, 0 100%);
+    /*-webkit-clip-path: polygon(0 87%, 100% 8%, 100% 100%, 0 100%);
+    clip-path: polygon(0 71%, 100% 8%, 100% 100%, 0 100%);*/
     text-align: center;
 }
+.cust_footer{
+    margin-top: 4%;
+    color: #fff !important;
+    text-align: left;
+    float: left;
+}
 .foot-top{
-background: #03a9f4 url(../img/ball-img.png);
+/*background: #03a9f4 url(../img/ball-img.png);*/
     background-size: cover;
-    height: 91px;
+    height: 71px;
     -webkit-clip-path:  polygon(0 14%, 0% 92%, 100% 11%);
     clip-path: polygon(0 14%, 0% 92%, 100% 11%);
     width: 61%;
     position: absolute;
     left: 0px;
-      bottom: -165px;
+    bottom: -165px;
 }
 .logo-bottom{
 	margin-top:108px;
@@ -1304,6 +1312,108 @@ box-shadow: rgba(255,255,255, 0.75) 1.5em 0 0 0, rgba(255,255,255, 0.75) 1.1em 1
 .owl-nav{
     display: none;
 }
+.howitwork-bg{
+    background-image: url(../img/how-it-work-bg.jpg);
+    background-size: cover;
+    padding: 20px;
+}
+
+
+
+
+
+.foot_bg{
+        background-image: url(../img/foot-bg.jpg);
+    background-size: cover;
+    padding: 40px;
+
+}
+.howitwork-bg {
+
+    background-image: url(../img/how-it-work-bg.jpg);
+    background-size: cover;
+    height: 414px;
+    background-position: center;
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 59%, 0 99%);
+    clip-path: polygon(0 0, 100% 0, 100% 59%, 0 99%);
+    margin-top: -64px;
+
+}
+
+
+.socails-team ul{
+    margin: 0px;
+    padding: 0px;
+}
+.socails-team ul li {
+    list-style-type: none;
+    margin: 8px;
+    display: inline-block;
+}
+.socails-team ul li a {
+    text-decoration: none;
+    color: #333;
+    font-size: 17px;
+}
+.socails-team ul li a:hover .google {
+      color: #d34836!important;
+    margin-top: 2px;
+}
+.socails-team ul li a:hover .fb {
+   color: #3B5998!important;
+}
+.socails-team ul li a:hover .twitter {
+       color: #0084b4!important;
+}
+.socails-team{
+    margin-bottom:30px;
+}
+.map{
+margin: 0px;
+}
+.pad20{
+    padding: 22px;
+}
+
+.cont_box{
+    border:1px solid #efefef;
+    padding: 7px 34px 10px;
+}
+
+.cont_box_li{list-style-image: url(../img/arrow_more_blue.png); line-height: 25px;}
+
+.registration{
+    position: fixed;
+    background-color: red;
+    right: 0 ;
+    background-color: #03a9f4;
+    padding:8px 20px ;
+    border-bottom-right-radius:   10px;
+    border-bottom-left-radius:   10px
+     }
+.vertical-text {
+   
+    transform: rotate(90deg);
+    transform-origin: right top 0;
+
+}
+
+.registration a{text-decoration: none; color: #fff}
+
+.bg_color{background-color: #eff7fd}
+
+
+
+@media only screen and (min-width: 320px) and (max-width: 480px) {
+
+    .blue-bg{
+        margin-bottom: 39px
+        }
+        .play-icon{margin-bottom: 20px}
+}
+
+.margin50{margin: 40px 0;}
+
 /*#temp_article{
     display: none;
 }*/
