--- a/public/css/style1.css
+++ b/public/css/style1.css
@@ -868,7 +868,7 @@ width:100%;
 }
 .article-detail{
     width: 100%;
-    height: 281px;
+   /* height: 281px;*/
     overflow: hidden;
     padding: 10px;
 }
